RESOLVED FIXED308421
Fix CLANG_POINTER_CONVERSION annotation on wrapper so that we can remove suppressions
https://bugs.webkit.org/show_bug.cgi?id=308421
Summary Fix CLANG_POINTER_CONVERSION annotation on wrapper so that we can remove supp...
Ryosuke Niwa
Reported 2026-02-21 23:17:10 PST
Turns out I added CLANG_POINTER_CONVERSION to a wrong location. Fix this so that we don't need to suppress a warning everywhere.
Attachments
Ryosuke Niwa
Comment 1 2026-02-21 23:23:08 PST
EWS
Comment 2 2026-02-22 12:05:39 PST
Committed 308015@main (eb6bd744f25c): <https://commits.webkit.org/308015@main> Reviewed commits have been landed. Closing PR #59198 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-02-22 12:06:13 PST
Note You need to log in before you can comment on or make changes to this bug.