Fix CLANG_POINTER_CONVERSION annotation on wrapper so that we can remove suppressions https://bugs.webkit.org/show_bug.cgi?id=308421

Reviewed by Wenson Hsieh.

The false positive was happening due to CLANG_POINTER_CONVERSION being placed before the return type
as opposed to after the return type like everywhere else. Fix that so that we can remove suppressions
added in 307994@main.

No new tests since there should be no behavioral changes.

* Source/WebKit/Shared/Cocoa/WKObject.h:
(WebKit::checkedObjCCast):
(WebKit::wrapper):
* Source/WebKit/UIProcess/API/Cocoa/WKFormInfo.mm:
(-[WKFormInfo targetFrame]):
(-[WKFormInfo sourceFrame]):
* Source/WebKit/UIProcess/API/Cocoa/WKJSHandle.mm:
(-[WKJSHandle world]):
* Source/WebKit/UIProcess/API/Cocoa/WKNavigationAction.mm:
(-[WKNavigationAction sourceFrame]):
* Source/WebKit/UIProcess/API/Cocoa/WKNavigationResponse.mm:
(-[WKNavigationResponse _navigationInitiatingFrame]):
* Source/WebKit/UIProcess/API/Cocoa/WKWebpagePreferences.mm:
(-[WKWebpagePreferences _websiteDataStore]):
(-[WKWebpagePreferences _userContentController]):
* Source/WebKit/UIProcess/API/Cocoa/WKWebsiteDataStore.mm:
(+[WKWebsiteDataStore defaultDataStore]):
(-[WKWebsiteDataStore httpCookieStore]):
* Source/WebKit/UIProcess/API/Cocoa/_WKDownload.mm:
(-[_WKDownload resumeData]):
* Source/WebKit/UIProcess/API/Cocoa/_WKInspectorConfiguration.mm:
(-[_WKInspectorConfiguration processPool]):
* Source/WebKit/WebProcess/InjectedBundle/API/mac/WKWebProcessPlugInBrowserContextController.mm:
(willSendRequestForFrame):

Canonical link: https://commits.webkit.org/308015@main