Source/WebKit/UIProcess/API/Cocoa/_WKInspectorConfiguration.mm
@@ -69,8 +69,7 @@ ALLOW_DEPRECATED_DECLARATIONS_BEGIN
 
 - (WKProcessPool *)processPool
 {
-    // Static analyzer false positive. CLANG_POINTER_CONVERSION should make this warning go away but doesn't.
-    SUPPRESS_UNCOUNTED_ARG return wrapper(protect(*_configuration)->processPool());
+    return wrapper(protect(*_configuration)->processPool());
 }
 ALLOW_DEPRECATED_DECLARATIONS_END
 
